--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,5 +1,6 @@
 tasks:
   - before: |
+      npm install 
       export MO_DEV_HIDE_URLS=1 # hide Candid UI links
       export PATH="$HOME/bin:$PATH"
       echo 'export PATH="$HOME/bin:$PATH"' >> ~/.bashrc
