--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@dfinity/agent": "https://gitpkg.now.sh/domwoe/agent-js/packages/agent?feature/prepare-message",
     "@dfinity/candid": "^0.15.0",
     "@dfinity/identity-secp256k1": "^0.15.5",
-    "@dfinity/principal": "^0.15.5"
+    "@dfinity/principal": "^0.15.5",
+    "crypto-browserify": "^3.12.0",
+    "tweetnacl": "^1.0.3"
   }
 }
