add deployed demo
Signed-off-by: Dominic Woerner <dominic.woerner@dfinity.org>

--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 
 # DFX CANISTER ENVIRONMENT VARIABLES
 DFX_VERSION='0.13.1'
-DFX_NETWORK='local'
-CANISTER_CANDID_PATH_metamask_ic_backend='/Users/domwoe/Dev/projects/metamask_ic/.dfx/local/canisters/metamask_ic_backend/metamask_ic_backend.did'
-CANISTER_ID_metamask_ic_frontend='renrk-eyaaa-aaaaa-aaada-cai'
-CANISTER_ID_metamask_ic_backend='rno2w-sqaaa-aaaaa-aaacq-cai'
-CANISTER_ID='renrk-eyaaa-aaaaa-aaada-cai'
-CANISTER_CANDID_PATH='/Users/domwoe/Dev/projects/metamask_ic/.dfx/local/canisters/metamask_ic_frontend/assetstorage.did'
+DFX_NETWORK='ic'
+CANISTER_CANDID_PATH_metamask_ic_backend='/Users/domwoe/Dev/projects/metamask_ic/.dfx/ic/canisters/metamask_ic_backend/metamask_ic_backend.did'
+CANISTER_ID_metamask_ic_frontend='4n2mr-ryaaa-aaaap-qba5q-cai'
+CANISTER_ID_metamask_ic_backend='4k3kf-4aaaa-aaaap-qba5a-cai'
+CANISTER_ID='4n2mr-ryaaa-aaaap-qba5q-cai'
+CANISTER_CANDID_PATH='/Users/domwoe/Dev/projects/metamask_ic/.dfx/ic/canisters/metamask_ic_frontend/assetstorage.did'
 # END DFX CANISTER ENVIRONMENT VARIABLES
